Header items alignment fixed

--- a/src/common/Header.css
+++ b/src/common/Header.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-right: 20px;
 }
 
 .logo {
@@ -23,10 +24,17 @@
   align-self: center;
   border-radius: 4px;
   width: 300px;
+  display: flex;
+  flex-direction: row;
   background-color: #c0c0c0;
+  align-items: center;
   padding: 5px;
+  margin-right: 20px;
 }
 
 .icon-button {
   cursor: pointer;
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
 }
